--- a/src/main/resources/public/template/auth/authEdit.html
+++ b/src/main/resources/public/template/auth/authEdit.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
         </div>
-        <div class="flex-row auth-btn-layout">
+        <div class="flex-row justify-content-end mr-5">
             <div class="btn-list">
                 <button sec:authorize="hasAuthority('auth.create')"
                         class="point-fill" type="button" id="btnRegist" name="btnRegist"
