--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -345,6 +345,10 @@ input, button, select, optgroup, textarea {
   margin-left: 1.25rem;
 }
 
+.ml-5 {
+  margin-left: 1.875rem;
+}
+
 .ml-auto {
   margin-left: auto;
 }
@@ -369,6 +373,10 @@ input, button, select, optgroup, textarea {
   margin-right: 1.25rem;
 }
 
+.mr-5 {
+  margin-right: 1.875rem;
+}
+
 .mr-auto {
   margin-right: auto;
 }
@@ -391,6 +399,10 @@ input, button, select, optgroup, textarea {
 
 .mt-4 {
   margin-top: 1.25rem;
+}
+
+.mt-5 {
+  margin-top: 1.875rem;
 }
 
 .mt-auto {
@@ -2121,6 +2133,11 @@ button .icon-plus {
 
 .notice-pinned {
   background-color: rgba(135, 206, 255, 0.15);
+}
+
+.auth-btn-layout {
+  justify-content: flex-end;
+  margin-right: 1.875rem;
 }
 
 .document-content {
