--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -211,9 +211,9 @@
         if (isEmpty('userName', 'user.msg.enterUserName')) return false;
         if (isEmpty('email', 'user.msg.enterUserEmail')) return false;
         if (isNotEquals('password', 'rePassword', 'user.msg.passwordNotEquals')) return false;
-        if (!isValidUserId('userId')) return false;
+        if (!isValidUserId('userId', true)) return false;
         if (!isValidPassword('password')) return false;
-        if (!isValidEmail('email')) return false;
+        if (!isValidEmail('email', true)) return false;
 
         return true;
     }
