--- a/src/main/resources/public/template/cmdb/ci/ciEditModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciEditModal.html
@@ -20,7 +20,7 @@
                 </label>
                 <div class="flex-row input-button">
                     <input type="hidden" id="typeId" th:value="${ciData?.typeId}" />
-                    <input type="text" id="typeName" class="col-pct-12 inherit" th:value="${ciData?.typeName}" readonly required="required">
+                    <input type="text" id="typeName" class="col-pct-12 inherit" th:value="${ciData?.typeName}" readonly required="true" th:attr="data-required-name=#{cmdb.ci.label.type}">
                     <button class="default-line col-1" type="button" th:onclick="|javascript:CI.openSelectTypeModal(${ciData?.typeId});|" th:text="#{common.btn.select}"></button>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                     <span th:text="#{cmdb.ci.label.name}"></span>
                     <span class="required"></span>
                 </label>
-                <input id="ciName" type="text" maxlength="100" required="required" th:value="${ciData?.ciName}"/>
+                <input id="ciName" type="text" maxlength="100" required="true" th:value="${ciData?.ciName}" th:attr="data-required-name=#{cmdb.ci.label.name}"/>
             </div>
             <!--CI 설명 -->
             <div class="flex-column edit-row">
@@ -57,7 +57,7 @@
                 </label>
                 <div class="flex-row input-button">
                     <input type="hidden" id="classId" th:value="${ciData?.classId}"/>
-                    <input type="text" id="className" class="col-pct-12 inherit" th:value="${ciData?.className}" readonly required="required">
+                    <input type="text" id="className" class="col-pct-12 inherit" th:value="${ciData?.className}" readonly required="true" th:attr="data-required-name=#{cmdb.type.label.class}">
                     <button class="default-line col-1" type="button" th:onclick="|javascript:CI.openSelectClassModal(${ciData?.classId})|" th:text="#{common.btn.select}"></button>
                 </div>
             </div>
