--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -152,7 +152,7 @@
                 selectedColorBox.style.backgroundColor = elementObject.value;
             }
             elementObject.addEventListener('change', function() {
-                if (this.value.trim() !== '' && !isValidRgb(this.id, function() { elementObject.focus(); })) {
+                if (this.value.trim() !== '' && !isValidRgb(this.id, true)) {
                     this.value = '';
                 }
                 selectedColorBox.style.backgroundColor = this.value;
