#9661 hg.jung Commit

--- a/src/main/resources/public/src/scss/theme/default/_elements.scss
+++ b/src/main/resources/public/src/scss/theme/default/_elements.scss
@@ -100,7 +100,7 @@ table[id="documentDisplay"] {
     padding: 0.5rem 0.625rem; // 8px 10px
 
     .right {
-      right: 0.25rem;
+      right: 0.25rem; // 4px
     }
 
     li {
