--- a/src/main/resources/public/template/cmdb/type/typeEdit.html
+++ b/src/main/resources/public/template/cmdb/type/typeEdit.html
@@ -44,6 +44,10 @@
                     <input id="typeId" name="typeId" type="hidden"/>
                 </div>
                 <div class="edit-row flex-column">
+                    <label class="required" th:text="#{cmdb.type.label.alias}" for="typeAlias"></label>
+                    <input id="typeAlias" name="typeAlias" type="text" maxlength="10" />
+                </div>
+                <div class="edit-row flex-column">
                     <label th:text="#{cmdb.type.label.description}" for="typeDesc"></label>
                     <textarea id="typeDesc" name="typeDesc" th:maxlength="200" th:rows="7"
                               class="textarea-scroll-wrapper" text=""></textarea>
@@ -138,6 +142,7 @@
                             document.getElementById('btnDelete').disabled = true;
                             document.querySelector('button[name=typeIconSelector]').disabled = true;
                             document.querySelector('button[name=typeClassSelector]').disabled = true;
+                            document.getElementById('typeAlias').disabled = true;
                         }
                         onEdit();
                     }
