#10103 폼 디자이너 툴에서 문서양식 이름이 필수값이지만 비우고 저장이 가능하다.

--- a/src/main/resources/public/src/scss/form/_modal.scss
+++ b/src/main/resources/public/src/scss/form/_modal.scss
@@ -4,6 +4,7 @@
   // 폼 다른이름으로 저장하기 모달
   &.save-as {
     .modal-content {
+      height: calc(#{$save-as-modal-height} - #{$modal-header-height} - #{$modal-bottom-height});
       padding: 0.625rem 1.25rem; // 10px 20px
       @include scrollbarHidden;
 
