--- a/src/main/resources/public/template/form/formDesignerEdit.html
+++ b/src/main/resources/public/template/form/formDesignerEdit.html
@@ -253,6 +253,7 @@
                 <label class="property-field-name" for="name" th:text="#{form.properties.name}"></label>
                 <span class="required"></span>
                 <input type="text" class="property-value" required="required" maxlength="20">
+                <label class="error-msg"></label>
             </div>
             <div class="property-field" id="desc">
                 <label class="property-field-name" for="desc" th:text="#{form.properties.desc}"></label>
@@ -272,7 +273,6 @@
 </th:block>
 </body>
 <th:block layout:fragment="script">
-    <script th:src="@{/assets/js/workflow/workflow.util.js}"></script>
     <script th:src="@{/assets/js/util/shortcut-alice.js}"></script>
     <script th:src="@{/assets/js/util/alert-alice.js}"></script>
     <script th:src="@{/assets/js/form/form.editor.context.js}"></script>
