#10138 hg.jung 차트 타입 변경시 엘리먼트 출력 관련 수정

--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -424,6 +424,9 @@
                 if (value === 'chart.basicLine') {
                     document.getElementById('groupLabel').style.display = 'block';
                     document.getElementById('targetGroup').style.display = 'block';
+                } else {
+                    document.getElementById('groupLabel').style.display = 'none';
+                    document.getElementById('targetGroup').style.display = 'none';
                 }
             } else {
                 document.getElementById('periodUnitLabel').style.display = 'none';
