#10081 CI 조회 상세화면 구현
- 초기 설계

--- a/src/main/resources/public/src/scss/template/_elements.scss
+++ b/src/main/resources/public/src/scss/template/_elements.scss
@@ -172,6 +172,13 @@ textarea {
     cursor: default;
   }
 
+  &:read-only {
+    background-color: $element-disabled-bg-color;
+    border-color: $element-disabled-border-color;
+    pointer-events: none;
+    cursor: default;
+  }
+  
   &.error {
     color: $element-error-font-color;
     border: $element-error-border;
