--- a/src/main/resources/public/template/cmdb/ci/ciViewModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciViewModal.html
@@ -11,18 +11,19 @@
                     <span th:text="#{cmdb.ci.label.seqNum}"></span>
                 </label>
                 <div class="flex-row input-button">
-                   <input type="text" id="ciNo" class="col-pct-12 inherit" th:value="${ci?.ciNo}" maxlength="100"
-                          readonly/>
+                   <input type="text" id="ciNo" class="col-pct-12 inherit" th:value="${ci?.ciNo}" maxlength="100" readonly/>
                 </div>
             </div>
             <!-- CI 타입 -->
             <div class="flex-column edit-row">
                 <label class="field-label" for="typeName">
                     <span th:text="#{cmdb.ci.label.type}"></span>
+                    <span class="required"></span>
                 </label>
                 <div class="flex-row input-button">
                     <input type="hidden" id="typeId" th:value="${ci?.typeId}" />
                     <input type="text" id="typeName" class="col-pct-12 inherit" th:value="${ci?.typeName}" readonly required="true" th:attr="data-required-name=#{cmdb.ci.label.type}"/>
+                    <button class="default-line col-1" type="button" th:text="#{common.btn.select}"></button>
                 </div>
             </div>
             <!-- 아이콘 -->
@@ -32,15 +33,17 @@
                 </label>
                 <div class="flex-row input-button">
                     <input type="text" id="typeIcon" class="col-pct-12 inherit" th:value="${ci?.ciIcon}" readonly>
+                    <button class="default-line col-1" type="button" th:text="#{common.btn.select}"></button>
                 </div>
             </div>
             <!-- CI 이름 -->
             <div class="flex-column edit-row">
                 <label class="field-label" for="ciName">
                     <span th:text="#{cmdb.ci.label.name}"></span>
+                    <span class="required"></span>
                 </label>
                 <div class="flex-row input-button">
-                    <input id="ciName" type="text" class="col-pct-12 inherit"  readonly maxlength="100" required="true"
+                    <input id="ciName" type="text" class="col-pct-12 inherit" readonly maxlength="100" required="true"
                            th:value="${ci?.ciName}" th:attr="data-required-name=#{cmdb.ci.label.name}"/>
                 </div>
             </div>
@@ -49,17 +52,19 @@
                 <label class="field-label" for="ciDesc">
                     <span th:text="#{cmdb.ci.label.description}"></span>
                 </label>
-                <textarea id="ciDesc" class="textarea-scroll-wrapper" readonly rows="7" maxlength="128"
+                <textarea id="ciDesc"class="textarea-scroll-wrapper" readonly rows="7" maxlength="128"
                           th:text="${ci?.ciDesc}"></textarea>
             </div>
             <!--클래스 -->
             <div class="flex-column edit-row">
                 <label class="field-label" for="className">
                     <span th:text="#{cmdb.type.label.class}"></span>
+                    <span class="required"></span>
                 </label>
                 <div class="flex-row input-button">
                     <input type="hidden" id="classId" th:value="${ci?.classId}"/>
                     <input type="text" id="className" class="col-pct-12 inherit" th:value="${ci?.className}" readonly required="true" th:attr="data-required-name=#{cmdb.type.label.class}"/>
+                    <button class="default-line col-1" type="button" th:text="#{common.btn.select}"></button>
                 </div>
             </div>
             <!-- CI 태그 -->
@@ -67,7 +72,9 @@
                 <label class="field-label">
                     <span th:text="#{cmdb.ci.label.tag}"></span>
                 </label>
-                <input type="text" id="ciTags" readonly th:value="${ci?.ciTags}" />
+                <!--<span class="tag align-center text-ellipsis" th:each="tag: ${token.tags}" th:text="${tag}"></span>-->
+                <!--<input type="text" id="ciTags" readonly th:value="${ci?.ciTags}" />-->
+                <input name="tags" th:value="|${ci?.ciTags}|"/>
             </div>
             <!-- 세부속성 -->
             <div class="flex-column edit-row">
