--- a/src/main/resources/public/template/form/fragments/formHead.html
+++ b/src/main/resources/public/template/form/fragments/formHead.html
@@ -8,6 +8,7 @@
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <link th:href="@{/assets/vendors/quill/quill.snow.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.css}" rel="stylesheet"/>
+    <link th:href="@{/assets/vendors/tagify/tagify.css}" rel="stylesheet"/>
     <link th:href="@{/assets/css/form.css}" rel="stylesheet"/>
     <script th:src="@{/assets/js/util/i18n-alice.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
@@ -19,9 +20,10 @@
     <script th:src="@{/assets/js/util/colorPalette-alice.js}"></script>
     <script th:src="@{/assets/vendors/quill/quill.js}"></script>
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
+    <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
+    <script th:src="@{/assets/vendors/tagify/tagify.js}"></script>
     <script th:src="@{/assets/js/util/fileuploader-alice.js}"></script>
     <script th:src="@{/assets/js/util/validation-alice.js}"></script>
-    <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
     <script th:src="@{/assets/js/util/tree-alice.js}"></script>
     <script th:src="@{/assets/js/workflow/workflow.util.js}"></script>
     <script th:src="@{/assets/js/cmdb/cmdb.attribute.js}"></script>
